fixed horizontal scroll

--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -50,6 +50,10 @@ h1{
   padding: 0;
 }
 
+html{
+  overflow-x: hidden;
+}
+
 body{
   overflow-x: hidden;
 }
